# ais-dev2il-mlops-taxi-rides

./: .gitignore  README.md  pyproject.toml  run-container-github.sh  run-container.sh
.github/workflows/: build.yml
notebooks/: notebook.ipynb  taxi-ride-data-drift-detection.ipynb  taxi-ride-outlier-detection.ipynb
taxi_rides_outlier_detection/: cli.py  monitoring.py  outlier_detector.py
tests/taxi_rides_outlier_detection/: test_fixtures.py  test_outlier_detector.py
